Changed a few things
Renamed readme file

Added live site URL to readme

Fixed issue of picture not showing on website

--- a/index.html
+++ b/index.html
@@ -23,9 +23,9 @@
 
   <main class="card_container">
 
-    <img src="/images/image-product-mobile.jpg" alt="picture of parfume" class="perfume_img_phone">
+    <img src="./images/image-product-mobile.jpg" alt="picture of parfume" class="perfume_img_phone">
 
-    <img src="/images/image-product-desktop.jpg" alt="picture of parfume" class="perfume_img_desktop">
+    <img src="./images/image-product-desktop.jpg" alt="picture of parfume" class="perfume_img_desktop">
 
     <div class="data_container">
 
